# cooyote

./: .envrc  Cargo.toml  Cross.toml  Dockerfile  Justfile  README.md  ansible.cfg  deploy.yml  hosts.ini
.ci/: deploy.yml  setup.yml
.github/: dependabot.yml
.github/workflows/: test.yaml
src/: main.rs  metrics.rs  zyaura.rs
