[package]
name = "cooyote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
hidapi = { version = "2.6.4", default-features = false, features = ["linux-native-basic-udev"] }
prometheus = "0.13.4"
thiserror = "2.0.18"
tokio = { version = "1.40.0", features = ["full"] }
