[package]
name = "cooyote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
hidapi = { version = "2.6.4", default-features = false, features = ["linux-native-basic-udev"] }
prometheus = "0.14.0"
thiserror = "2.0.18"
tokio = { version = "1.40.0", features = ["full"] }
